--- a/templates/index.html
+++ b/templates/index.html
@@ -51,5 +51,5 @@
 {% endblock %}
 
 {% block js %}
-<script src="{{ url_for('static', filename='js/sesion.js') }}"></script>
+<script src="{{ url_for('static', filename='js/sesion.js', v='1.2') }}"></script>
 {% endblock %}
