--- a/templates/Formulario.html
+++ b/templates/Formulario.html
@@ -98,6 +98,10 @@
                     <label>Predica:</label>
                     <input type="text" name="Predica" required>
                 </div>
+                <div class="form-group">
+                    <label>Fecha de Reunión:</label>
+                    <input type="date" name="fecha_reunion" required>
+                </div>
                 <div class="button-group">
                     <button type="submit" class="btn btn-primary">Registrar</button>
                     <button type="button" class="btn btn-secondary" onclick="limpiarFormulario(this)">Limpiar</button>
