--- a/templates/Consultas.html
+++ b/templates/Consultas.html
@@ -135,5 +135,6 @@
 {% endblock %}
 
 {% block js %}
+<script src="{{ url_for('static', filename='js/sesion.js') }}"></script>
 <script src="{{ url_for('static', filename='js/consultas_select.js') }}"></script>
 {% endblock %}
