--- a/templates/Formulario.html
+++ b/templates/Formulario.html
@@ -234,5 +234,6 @@
 {% endblock %}
 
 {% block js %}
+<script src="{{ url_for('static', filename='js/sesion.js') }}"></script>
 <script src="{{ url_for('static', filename='js/formularios_insert.js') }}"></script>
 {% endblock %}
