--- a/templates/Informe.html
+++ b/templates/Informe.html
@@ -34,6 +34,7 @@
                     <option value="financiero">Reporte Financiero</option>
                     <option value="asistencias">Reporte de Asistencias</option>
                     <option value="actividades">Reporte de Actividades</option>
+                    
                     <option value="personalizado">Informe Personalizado</option>
                 </select>
             </div>
@@ -149,5 +150,6 @@
 {% endblock %}
 
 {% block js %}
+<script src="{{ url_for('static', filename='js/sesion.js') }}"></script>
 <script src="{{ url_for('static', filename='js/informes_export.js') }}"></script>
 {% endblock %}
