--- a/templates/Tablas.html
+++ b/templates/Tablas.html
@@ -531,5 +531,6 @@
 {% endblock %}
 
 {% block js %}
+<script src="{{ url_for('static', filename='js/sesion.js') }}"></script>
 <script src="{{ url_for('static', filename='js/tablas_formularios.js') }}"></script>
 {% endblock %}
