--- a/templates/Tablas.html
+++ b/templates/Tablas.html
@@ -74,19 +74,19 @@
             <h2>Gestión de Predicadores</h2>
             <div class="form-group">
                 <label>ID:</label>
-                <input type="text" name="id" readonly>
+                <input type="text" name="id_predicador" readonly>
             </div>
             <div class="form-group">
                 <label>Nombre:</label>
-                <input type="text" name="Nombre" required>
+                <input type="text" name="nombre" required>
             </div>
             <div class="form-group">
                 <label>Apellido:</label>
-                <input type="text" name="Apellido" required>
+                <input type="text" name="apellido" required>
             </div>
             <div class="form-group">
-                <label>Numero:</label>
-                <input type="text" name="Numero" required>
+                <label>Teléfono:</label>
+                <input type="text" name="telefono" required>
             </div>
             <div class="button-group">
                 <button type="submit" class="btn btn-primary">Registrar</button>
@@ -107,15 +107,15 @@
                     <input type="hidden" name="id">
                     <div class="form-group">
                         <label>Nombre:</label>
-                        <input type="text" name="Nombre" required>
+                        <input type="text" name="nombre" required>
                     </div>
                     <div class="form-group">
                         <label>Apellido:</label>
-                        <input type="text" name="Apellido" required>
+                        <input type="text" name="apellido" required>
                     </div>
                     <div class="form-group">
-                        <label>Numero:</label>
-                        <input type="text" name="Numero" required>
+                        <label>Teléfono:</label>
+                        <input type="text" name="telefono" required>
                     </div>
                     <div class="button-group">
                         <button type="submit" class="btn btn-primary">Guardar</button>
